# vstack

./: .gitignore  .markdownlint-cli2.yaml  .markdownlint.yaml  .pre-commit-config.yaml  .release-please-config.json  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README-pypi.md  README.md  SECURITY.md  cchk.toml  pyproject.toml
.github/: CODEOWNERS  copilot-instructions.md  dependabot.yml  pull_request_template.md  vstack.json
.github/DISCUSSION_TEMPLATE/: first-run-report.md  model-cost-feedback.md  onboarding-feedback.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/agents/: architect.agent.md  designer.agent.md  engineer.agent.md  planner.agent.md  product.agent.md  release.agent.md  tester.agent.md
.github/hooks/: post-commit-security-scan.json  post-edit-format.json  post-edit-markdown-quality.json  pre-tool-safety-gate.json  session-audit.json
.github/instructions/: git.instructions.md  helm.instructions.md  java.instructions.md  k8s.instructions.md  markdown.instructions.md  python.instructions.md  rancher.instructions.md  security.instructions.md  terraform.instructions.md  terragrunt.instructions.md  testing.instructions.md  typescript.instructions.md
.github/prompts/: api-design-review.prompt.md  architecture-risk.prompt.md  artifact-integrity.prompt.md  ci-triage.prompt.md  code-review.prompt.md  dependency-audit.prompt.md  incident-timeline.prompt.md  migration-plan.prompt.md  migration-safety.prompt.md  ops-readiness.prompt.md  quick-review.prompt.md  reasoning.prompt.md  release-check.prompt.md  release-readiness.prompt.md  repo-assessment.prompt.md  template-impact.prompt.md  test-gaps.prompt.md  upgrade-plan.prompt.md  workflow-check.prompt.md
.github/skills/adr/: SKILL.md
.github/skills/advise/: SKILL.md
.github/skills/analyse/: SKILL.md
.github/skills/architecture/: SKILL.md
.github/skills/ask/: SKILL.md
.github/skills/aws-cli/: SKILL.md
.github/skills/changedoc/: SKILL.md
.github/skills/cicd/: SKILL.md
.github/skills/cloudformation/: SKILL.md
.github/skills/code-review/: SKILL.md
.github/skills/codeql/: SKILL.md
.github/skills/concise/: SKILL.md
.github/skills/consult/: SKILL.md
.github/skills/container/: SKILL.md
.github/skills/conventional-commit/: SKILL.md
.github/skills/copilot-ops/: SKILL.md
.github/skills/debug/: SKILL.md
.github/skills/dependabot/: SKILL.md
.github/skills/dependency/: SKILL.md
.github/skills/design/: SKILL.md
.github/skills/docs/: SKILL.md
.github/skills/explore/: SKILL.md
.github/skills/freeze/: SKILL.md
.github/skills/gdpr/: SKILL.md
.github/skills/gh-issues/: SKILL.md
.github/skills/gh-release/: SKILL.md
.github/skills/guardrails/: SKILL.md
.github/skills/helm/: SKILL.md
.github/skills/incident/: SKILL.md
.github/skills/inspect/: SKILL.md
.github/skills/k8s/: SKILL.md
.github/skills/lazy/: SKILL.md
.github/skills/migrate/: SKILL.md
.github/skills/onboard/: SKILL.md
.github/skills/openapi/: SKILL.md
.github/skills/performance/: SKILL.md
.github/skills/postmortem/: SKILL.md
.github/skills/pr/: SKILL.md
.github/skills/rancher/: SKILL.md
.github/skills/rca/: SKILL.md
.github/skills/refactor/: SKILL.md
.github/skills/release-notes/: SKILL.md
.github/skills/requirements/: SKILL.md
.github/skills/secret-scan/: SKILL.md
.github/skills/security/: SKILL.md
.github/skills/simplify/: SKILL.md
.github/skills/space-setup/: SKILL.md
.github/skills/terraform/: SKILL.md
.github/skills/terragrunt/: SKILL.md
.github/skills/threat-model/: SKILL.md
.github/skills/unfreeze/: SKILL.md
.github/skills/verify/: SKILL.md
.github/skills/vision/: SKILL.md
.github/workflows/: README.md  automerge.yml  check.yml  codeql.yml  commit.yml  publish.yml  qa.yml  release.yml  security.yml  verify.yml
.vstack/: .gitignore  config.yaml  vstack.json
docs/: performance-baseline.md  security-report.md  test-report.md
docs/architecture/: architecture.md  homebrew-publish-plan.md  overview.md
docs/architecture/adr/: 001-vscode-native-variant.md  002-artifact-naming-and-compatibility-policy.md  003-backend-first-verify.md  004-option-a-to-b-pipeline.md  005-vscode-prompt-format.md  006-no-runtime-dependency.md  007-python-runtime.md  008-agents-over-prompts.md  009-role-model.md  010-artifact-flow.md  011-skill-restructure.md  012-flat-templates-install-time-generation.md  013-instructions-vs-skills-boundary.md  014-manifest-schema-versioning.md  015-conservative-install-by-default.md  016-atomic-manifest-writes.md  017-checksum-backfill-on-upgrade.md  018-skill-genericity-boundary.md  019-vstack-project-directory.md  020-install-init-command-semantics.md  021-config-driven-artifact-paths.md  022-selective-exclude-filter.md  023-workflow-contract.md  024-subagent-orchestration.md  025-pyyaml-runtime-dependency.md  026-docs-artifact-migration-policy.md  027-repository-hooks-artifact-type.md  028-dag-dependency-semantics.md  029-multi-agentic-execution-model.md  030-homebrew-private-tap-distribution.md  031-planner-handoff-cache.md
docs/design/: agents.md  cicd.md  design.md  hook-yaml-schema.md  hooks.md  instructions.md  overview.md  skills.md  workflow.md
docs/product/: requirements.md  roadmap.md  vision.md
docs/releases/: 2026-04-01.md  2026-04-17.md  2026-04-19.md  2026-04-20.md  2026-04-21.md  2026-04-22.md  2026-04-26.md  2026-04-27.md  2026-04-28.md  2026-05-02.md  2026-05-04.md  2026-05-06.md  2026-05-09.md  2026-05-10.md  2026-05-12.md  2026-06-02.md
docs/reports/: performance-baseline.md  security-report.md  test-report.md
docs/user/: README.md  start-here.md
docs/user/explanation/: README.md  community-patterns.md  vstack-templates.md  workflow-modes.md
src/vstack/: __init__.py  __main__.py  constants.py  main.py  models.py  utils.py
tests/: __init__.py  conftest.py
tests/vstack/: test___init__.py  test___main__.py  test_constants.py  test_integration.py  test_main.py  test_models.py  test_publish_workflow.py
(+347 files in other folders)
