[project]
name = "vstack"
version = "0.0.0"
description = "VS Code-native AI engineering workflow system for microservices, libraries, and backend systems."
license = "MIT"
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = []

[project.scripts]
vstack = "vstack:main"

# ---------------------------------------------------------------------------
# Poetry-specific packaging config (package layout, file inclusion, dev deps).
# [project] above covers PEP 621 metadata; Poetry reads both.
# ---------------------------------------------------------------------------

[tool.poetry]
packages = [{include = "vstack", from = "src"}]
include = [
    { path = "src/vstack/_templates", format = ["sdist", "wheel"] },
]

[tool.poetry.group.dev.dependencies]
pytest = ">=9.0"
pytest-cov = ">=6.0"
ruff = ">=0.9"
mypy = ">=1.0"
pre-commit = ">=3.8"
tox = ">=4.15"


# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
pythonpath = ["src"]
addopts = [
    "--import-mode=importlib",
    "--cov=src/vstack",
    "--cov-report=term-missing",
    "--cov-fail-under=100",
]

# ---------------------------------------------------------------------------
# ruff
# ---------------------------------------------------------------------------

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = [
    "E501",  # line too long — handled by formatter
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------------------------------------------------------------------------
# mypy
# ---------------------------------------------------------------------------

[tool.mypy]
python_version = "3.11"
strict = false
warn_unused_ignores = true
warn_return_any = false
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# build system
# ---------------------------------------------------------------------------

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

# ---------------------------------------------------------------------------
# poetry-dynamic-versioning — reads version from git tags at build time.
# Fallback is used when no git tag is reachable (e.g. shallow clone, fresh repo).
# ---------------------------------------------------------------------------

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"
fallback-version = "0.0.0"

# ---------------------------------------------------------------------------
# pyright is used for type checking in VS Code, by Pylance.
# The "extraPaths" setting is used to find the "scripts" directory,
# which contains the main code for vstack, but is not a project dependency.
# ---------------------------------------------------------------------------

[tool.pyright]
pythonVersion = "3.11"
extraPaths = ["scripts"]

[tool.tox]
legacy_tox_ini = """
[tox]
min_version = 4.15
env_list = py311, py312, py313, py314, lint, type
skip_missing_interpreters = true

[testenv]
description = Run pytest for {env_name}
package = skip
deps =
    pytest>=9.0
    pytest-cov>=6.0
setenv =
    PYTHONPATH = {tox_root}/src
commands =
    python -m pytest -q

[testenv:lint]
description = Run ruff lint checks
package = skip
deps =
    ruff>=0.9
commands =
    ruff check src tests

[testenv:type]
description = Run mypy type checks
package = skip
deps =
    mypy>=1.0
commands =
    mypy src tests
"""
